# mudkip

./: .cache_ggshield  .gitignore  .gitmodules  Makefile  README.md
.github/workflows/: c-cpp.yml
cuPDLP-Float/: CMakeLists.txt
cuPDLP-Float/cupdlp/: cupdlp_cs.c  cupdlp_cs.h  cupdlp_defs.h  cupdlp_linalg.c  cupdlp_linalg.h  cupdlp_proj.h  cupdlp_step.c  cupdlp_step.h  cupdlp_utils.c  glbopts.h
cuPDLP-Float/cupdlp/cuda/: cupdlp_cuda_kernels.cuh
cuPDLP-Float/interface/: mps_highs.c  mps_lp.c  mps_lp.h
hw/: .gitignore  CMakeLists.txt  FindXSimConf.cmake  GetGtest.cmake  Makefile  generate.tcl  refresh.tcl
hw/configs/: basic_sync_fifo.gtkw  fixed_rrelu.gtkw  lfsr.gtkw  product.gtkw  product_32.gtkw  row_decoder_4_4.gtkw  row_decoder_8_4.gtkw  so_rr_arbiter.gtkw  spmv_4.gtkw  spmv_4_16.gtkw  spmv_net_6.gtkw
hw/include/: AxiUtils.hpp  Controller.hpp  ControllerBase.hpp  Defintions.hpp  Driver.hpp  Float.hpp  FloatOps.h  Global.hpp  Monitor.hpp  Signal.hpp  Simulation.hpp  TestUtils.hpp  Utils.hpp  floating_point_v7_1_bitacc_cmodel.h  xsi_shared_lib.h
hw/ips/fp_add_s/: fp_add_s.xml  fp_add_s_bmstub.v
hw/ips/fp_add_s/demo_tb/: tb_fp_add_s.vhd
hw/ips/fp_add_s/doc/: floating_point_v7_1_changelog.txt
hw/ips/fp_add_s/hdl/: floating_point_v7_1_rfs.v  mult_gen_v12_0_vh_rfs.vhd  xbip_dsp48_wrapper_v3_0_vh_rfs.vhd  xbip_pipe_v3_0_vh_rfs.vhd  xbip_utils_v3_0_vh_rfs.vhd
hw/ips/fp_add_s/sim/: fp_add_s.v
hw/lib/: TestUtils.cpp
hw/lib/waves/: product.fst
hw/rtl/: global.sv  top.v
hw/rtl/attach_start_to_stream/: attach_start_to_stream.sv
hw/rtl/axl_ps_adapters/: axl_ps_adapter.sv
hw/rtl/basic_ram/: r1w1_ram.sv
hw/rtl/basic_sync_fifo/: basic_sync_fifo.sv
hw/rtl/ctrl_data_fifo/: ctrl_data_fifo.sv
hw/rtl/decoder/: axi_stream_fifo.sv  pipeline.sv  row_decoder.sv  row_decoder_tb.sv
hw/rtl/delay/: delay.sv
hw/rtl/dsp_fl/: fadd.vhdl  fmul.vhdl
hw/rtl/fadd/: fadd.sv  fp_adder.v
hw/rtl/fixed_rrelu/: fixed_rrelu.sv
hw/rtl/fl_vadd/: fl_vadd.sv  fl_vadd.v  fl_vadd_top.v  fl_vadd_v.v
hw/rtl/flow_controller/: flow_controller.sv
hw/rtl/fmul/: Multiplication.v  fmul.sv  fp_mult.sv
hw/rtl/funnel/: funnel.sv
hw/rtl/interfaces/: axi_lite_if.sv  axi_stream_if.sv  network_if.sv  network_if_copier.sv  ps_if.sv  ps_if_copier.sv  ps_if_response_copier.sv  reg_if.sv  reg_if_copier.sv  vector_if.sv  vector_ram_if.sv  vector_ram_interface_copier.sv  vector_ram_master_null.sv  vector_ram_slave_null.sv
hw/rtl/ips/fp_add_s/: fp_add_s.veo  fp_add_s.xci  fp_add_s.xml
hw/rtl/ips/fp_add_s/hdl/: axi_utils_v2_0_vh_rfs.vhd
hw/rtl/ips/fp_add_s/synth/: fp_add_s.v
hw/rtl/lfsr/: lfsr.sv
hw/rtl/matrix_cat/: matrix_cat.sv
hw/rtl/mm2s/: dma_read.sv
hw/rtl/mxint/: log2_max_abs.sv  mxint_cast.sv  signed_clamp.sv
hw/rtl/oh_to_binary/: oh_to_binary.sv
hw/rtl/ps_core/: ps_core.sv
hw/rtl/ps_fifo/: ps_fifo.sv  ps_response_fifo.sv
hw/rtl/reg_core/: reg_core.sv
hw/rtl/rf_node/: rf_node.sv
hw/rtl/rf_top/: rf_top.sv  rf_top.v
hw/rtl/rr_arbiter/: network_ram_adapter.sv  rr_arbiter.sv  so_rr_arbiter.sv
hw/rtl/rw_2d_ram/: ram_2r1w.v  rw_2d_ram.sv
hw/rtl/s2mm/: s2mm.sv
hw/rtl/spmv/: fmac.sv  network_if.sv  product.sv  spmv.sv  spmv_kernel.sv  spmv_kernel_top.sv  spmv_network_op.sv  spmv_pkg.sv  spmv_reduction_network.sv  spmv_tb.sv  vector_ping_pong.sv  vector_ping_pong_ld_wrapper.sv
hw/rtl/spmv/tb/: spmv_network_op_tb.sv  spmv_network_op_tb.v  spmv_network_tb.sv
hw/rtl/uram/: uram.sv
hw/rtl/vector_adder/: vector_adder.sv  vector_adder_tb.sv
hw/rtl/vector_ram/: vector_ping_pong.sv  vector_ping_pong_ld_wrapper.sv  vector_ram.sv  vector_ram_tb.sv
hw/scripts/: create_ips.tcl  prj.tcl  sim_prep.sh  syn.tcl  viv.sh
hw/src/: Sim.cpp  Simulation.cpp  xsi_loader.cpp
hw/src/basic_sync_fifo/: CMakeLists.txt  FifoDriver.hpp  FifoMonitor.hpp  testbench.cpp
hw/src/fixed_rrelu/: testbench.cpp
hw/src/fl_vadd/: CMakeLists.txt  testbench.cpp
hw/src/fproduct/: testbench.cpp
hw/src/lfsr/: testbench.cpp
hw/src/product/: testbench.cpp
hw/src/rf_top/: AxiMasterDriver.hpp  AxiMasterMonitor.hpp  RfDriver.hpp  RfMonitor.hpp  test.cpp  testbench.cpp
hw/src/row_decoder_tb/: Driver.hpp  testbench.cpp
hw/src/rw_2d_ram/: CMakeLists.txt  RamDriver.hpp  RamMonitor.hpp  testbench.cpp
hw/src/rw_2d_ram_v/: CMakeLists.txt  RamDriver.hpp  RamMonitor.hpp  testbench.cpp
hw/src/so_rr_arbiter/: Driver.hpp  Interface.hpp  Monitor.hpp  Test.hpp  test.cpp  testbench.cpp
hw/src/spmv_network_op_tb/: testbench.cpp
hw/src/spmv_network_tb/: testbench.cpp
hw/src/top/: testbench.cpp
hw/src/vector_adder/: CMakeLists.txt  testbench.cpp
hw/src/vector_ram_tb/: testbench.cpp
hw/test/: mudkip_pytest.py  product_flt.py  spmv_network.py
hw/test/src/: mudkip_pytest.py
initial-sv-attempt/: Makefile  generate.tcl
initial-sv-attempt/configs/: basic_sync_fifo.gtkw  product_32.gtkw  rf_top_signals.gtkw  row_decoder.gtkw  spmv_net_32.gtkw  spmv_net_6.gtkw  spmv_net_8.gtkw  vector_ram.gtkw
initial-sv-attempt/include/: AxiUtils.hpp  Signal.hpp  Utils.hpp
initial-sv-attempt/ips/fp_add_s/: fp_add_s.xci  fp_add_s.xml
initial-sv-attempt/rtl/decoder/: axi_stream_fifo.sv  pipeline.sv  row_decoder_tb.sv
initial-sv-attempt/rtl/delay/: delay.sv
initial-sv-attempt/rtl/fixed_acc/: fixed_acc.sv
initial-sv-attempt/rtl/float_to_fixed/: float_to_fixed.sv
initial-sv-attempt/scripts/: prj.tcl  viv.sh
initial-sv-attempt/src/: Sim.cpp
initial-sv-attempt/test/: product_flt.py  spmv_network_op.py
scripts/: mudkip.tcl
sw/: .gitignore
sw/cupdlp/: .gitignore  Makefile  a.xclbin  cosim.cfg  run.sh  vsva1902.cfg  xrt.ini
sw/cupdlp/.wsdata/: clang_dir_map.json
sw/cupdlp/src/cupdlp/: CMakeLists.txt  cupdlp_defs.h
sw/cupdlp_ln/: CMakeLists.txt  UserConfig.cmake  vitis-comp.json
sw/cupdlp_sys/: CMakeLists.txt  vitis-sys.json
vivado/: .gitignore  generate.tcl  generate_swampert.tcl  mudkip.xpr
vivado/logs/: vivado.jou  vivado_16100.backup.jou  vivado_44800.backup.jou  vivado_7674.backup.jou  vivado_pid44800.str  vivado_pid78865.str
vivado/pfm/: .gitignore
vivado/ws/: .gitignore
(+986 files in other folders)
